# llmdy

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  llmdy.sh  pyproject.toml  requirements.txt  setup.sh
examples/youtube/: AI Has a Fatal Flaw—And Nobody Can Fix It - Slidebean.md  Developers are getting screwed. - typecraft.md  Something Strange Happens When You Trust Quantum Mechanics - Veritasium.md
llmdy/: __init__.py  cache.py  cli.py  constants.py  llmdy.py  llmdy_types.py  recovery.py  sanitize.py  types.py  util.py
llmdy/agents/: __init__.py  audio_extractor.py  transcript2md.py
src/: lib.rs
tests/: test_cache.py  test_recovery.py  test_sanitize.py
tests/agents/: test_audio_extractor.py  test_transcript2md.py
