[package]
name = "sanitizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sanitizer"
crate-type = ["cdylib"]

[dependencies]
futures-io = "0.3.31"
pyo3 = "0.23.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
url = "2.5.4"
visdom = { version = "1.0.2", features = ["destroy"] }
